--- a/docs/assets/AssetManifest.json
+++ b/docs/assets/AssetManifest.json
@@ -1,11 +1,1 @@
-{
-  "packages/flame_splash_screen/assets/layer1.png": [
-    "packages/flame_splash_screen/assets/layer1.png"
-  ],
-  "packages/flame_splash_screen/assets/layer2.png": [
-    "packages/flame_splash_screen/assets/layer2.png"
-  ],
-  "packages/flame_splash_screen/assets/layer3.png": [
-    "packages/flame_splash_screen/assets/layer3.png"
-  ]
-}
+{"packages/flame_splash_screen/assets/layer1.png":["packages/flame_splash_screen/assets/layer1.png"],"packages/flame_splash_screen/assets/layer2.png":["packages/flame_splash_screen/assets/layer2.png"],"packages/flame_splash_screen/assets/layer3.png":["packages/flame_splash_screen/assets/layer3.png"]}
